Fixed the look for the navbar on mobile

--- a/app/scss/_navBar.scss
+++ b/app/scss/_navBar.scss
@@ -54,17 +54,23 @@
 #userBar {
     grid-column: 1/5;
     grid-row: 2;
-    height: 100px;
+    height: 130px;
     background: $color3;
     z-index: 3;
+    
 }
 
 #mainNav {
     grid-column: 1/5;
     grid-row: 2;
-    height: 100px;
+    height: 260px;
     background: $color3;
     z-index: 3;
+}
+
+.vNav{
+    font-size: 1.5rem;
+    list-style: none;
 }
 
 #userBarLg {
@@ -100,3 +106,10 @@
         grid-row: 1/3;
     }
 }
+
+.vNavBg {
+    background: rgba(gray, 0.5);
+    margin: 0.2rem 0 0.2rem 0;
+    padding: 1rem;
+}
+
