--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,16 +61,20 @@
 #userBar {
   grid-column: 1/5;
   grid-row: 2;
-  height: 100px;
+  height: 130px;
   background: #898573;
   z-index: 3; }
 
 #mainNav {
   grid-column: 1/5;
   grid-row: 2;
-  height: 100px;
+  height: 260px;
   background: #898573;
   z-index: 3; }
+
+.vNav {
+  font-size: 1.5rem;
+  list-style: none; }
 
 #userBarLg {
   display: none; }
@@ -97,6 +101,11 @@
   @media (min-width: 768px) {
     #navBg {
       grid-row: 1/3; } }
+
+.vNavBg {
+  background: rgba(128, 128, 128, 0.5);
+  margin: 0.2rem 0 0.2rem 0;
+  padding: 1rem; }
 
 .hNav > li {
   display: inline;
